# RIO10

./: README.md  config.json  setup.sh
src/: compute_batched_relocalizations.py  plot.py  plot_with_other_change_measures.py
src/eval/: CMakeLists.txt  main.cpp
